// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag keeps the container the same when switching between isLoading and not isLoading 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  outline: 0 none;
  border: 0 none;
  background-color: #7c8186;
  color: #000;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  background: linear-gradient( 45deg, rgba(255,255,255,0.75), rgba(0,0,0,0.75), rgba(255,255,255,0.75), rgba(0,0,0,0.75), rgba(255,255,255,0.75) ) repeat;
  background-size: 400% 100%;
  width: 6rem;
  height: 16px;
  border-radius: 9999px;
  -webkit-animation: ia-dwnO 8s linear infinite;
  animation: ia-dwnO 8s linear infinite;
  line-height: 0;
  width: 5rem;
  height: 10px;
  margin-top: -5px;
  margin-bottom: -5px;
}

<span
  class="sc-AxiKw c0"
  color="#7c8186"
  data-test-id="tag-9"
  elevation="0"
>
  <div
    class="sc-AxjAm sc-fzoiQi c1"
  />
</span>
`;

exports[`Tag keeps the container the same when switching between isLoading and not isLoading 2`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  outline: 0 none;
  border: 0 none;
  background-color: #7c8186;
  color: #000;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<span
  class="sc-AxiKw c0"
  color="#7c8186"
  data-test-id="tag-9"
  elevation="0"
>
  Hello World!
</span>
`;

exports[`Tag shows LeftIconContainer when isProcessing 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  outline: 0 none;
  border: 0 none;
  background-color: #7c8186;
  color: #000;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  height: 1rem;
  margin-right: 1em;
}

<div>
  <span
    class="sc-AxiKw c0"
    color="#7c8186"
    data-test-id="tag-6"
    elevation="0"
  >
    <div
      class="sc-AxjAm c1"
    >
      <svg
        role="presentation"
        style="width: 1rem; height: 1rem;"
        viewBox="0 0 24 24"
      >
        <style>
          @keyframes spin { to { transform: rotate(360deg) } }
        </style>
        <g
          style="animation: spin linear 1s infinite; transform-origin: center;"
        >
          <path
            d="M12,4V2A10,10 0 0,0 2,12H4A8,8 0 0,1 12,4Z"
            style="fill: currentColor;"
          />
          <rect
            fill="transparent"
            height="24"
            width="24"
          />
        </g>
      </svg>
    </div>
    processing
  </span>
</div>
`;

exports[`Tag shows Tag with fill variant 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  outline: 0 none;
  border: 0 none;
  background-color: #7c8186;
  color: #000;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <span
    class="sc-AxiKw c0"
    color="#7c8186"
    data-test-id="tag-4"
    elevation="0"
  >
    fill variant
  </span>
</div>
`;

exports[`Tag shows Tag with non-default props variant and color 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  -webkit-filter: drop-shadow(0rem 0.07082177831667665rem 0.5rem rgba(39,47,78,0.39738511585523156));
  filter: drop-shadow(0rem 0.07082177831667665rem 0.5rem rgba(39,47,78,0.39738511585523156));
  outline: 0 none;
  border: 1px solid #000;
  background-color: transparent;
  color: #000;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <span
    class="sc-AxiKw c0"
    color="#000"
    data-test-id="tag-2"
    elevation="2"
  >
    Variant and color
  </span>
</div>
`;

exports[`Tag shows Tag with outline variant 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  outline: 0 none;
  border: 1px solid #7c8186;
  background-color: transparent;
  color: #7c8186;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <span
    class="sc-AxiKw c0"
    color="#7c8186"
    data-test-id="tag-5"
    elevation="0"
  >
    outline variant
  </span>
</div>
`;

exports[`Tag shows Tag with text variant 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  outline: 0 none;
  border: 0 none;
  background-color: transparent;
  color: #7c8186;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <span
    class="sc-AxiKw c0"
    color="#7c8186"
    data-test-id="tag-3"
    elevation="0"
  >
    text variant
  </span>
</div>
`;

exports[`Tag shows icons 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  outline: 0 none;
  border: 0 none;
  background-color: #7c8186;
  color: #000;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  height: 1rem;
}

.c2 {
  height: 1rem;
  margin-left: 1em;
}

<div>
  <span
    class="sc-AxiKw c0"
    color="#7c8186"
    data-test-id="tag-8"
    elevation="0"
  >
    <div
      class="sc-AxjAm c1"
    >
      <svg
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M9,22A1,1 0 0,1 8,21V18H4A2,2 0 0,1 2,16V4C2,2.89 2.9,2 4,2H20A2,2 0 0,1 22,4V16A2,2 0 0,1 20,18H13.9L10.2,21.71C10,21.9 9.75,22 9.5,22V22H9Z"
          style="fill: currentColor;"
        />
      </svg>
    </div>
    shows icons
    <div
      class="sc-AxjAm c2"
    >
      <svg
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M9,22A1,1 0 0,1 8,21V18H4A2,2 0 0,1 2,16V4C2,2.89 2.9,2 4,2H20A2,2 0 0,1 22,4V16A2,2 0 0,1 20,18H13.9L10.2,21.71C10,21.9 9.75,22 9.5,22V22H9Z"
          style="fill: currentColor;"
        />
      </svg>
    </div>
  </span>
</div>
`;

exports[`Tag shows icons with type string 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  outline: 0 none;
  border: 0 none;
  background-color: #7c8186;
  color: #000;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  height: 1rem;
  margin-right: 1em;
}

.c2 {
  height: 1rem;
  margin-left: 1em;
}

<div>
  <span
    class="sc-AxiKw c0"
    color="#7c8186"
    data-test-id="tag-7"
    elevation="0"
  >
    <div
      class="sc-AxjAm c1"
    >
      <svg
        role="presentation"
        style="width: 1rem; height: 1rem;"
        viewBox="0 0 24 24"
      >
        <path
          d="M9,22A1,1 0 0,1 8,21V18H4A2,2 0 0,1 2,16V4C2,2.89 2.9,2 4,2H20A2,2 0 0,1 22,4V16A2,2 0 0,1 20,18H13.9L10.2,21.71C10,21.9 9.75,22 9.5,22V22H9Z"
          style="fill: currentColor;"
        />
      </svg>
    </div>
    string icon props
    <div
      class="sc-AxjAm c2"
    >
      <svg
        role="presentation"
        style="width: 1rem; height: 1rem;"
        viewBox="0 0 24 24"
      >
        <path
          d="M9,22A1,1 0 0,1 8,21V18H4A2,2 0 0,1 2,16V4C2,2.89 2.9,2 4,2H20A2,2 0 0,1 22,4V16A2,2 0 0,1 20,18H13.9L10.2,21.71C10,21.9 9.75,22 9.5,22V22H9Z"
          style="fill: currentColor;"
        />
      </svg>
    </div>
  </span>
</div>
`;

exports[`Tag shows loading text when provided 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  outline: 0 none;
  border: 0 none;
  background-color: #7c8186;
  color: #000;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  background: linear-gradient( 45deg, rgba(255,255,255,0.75), rgba(0,0,0,0.75), rgba(255,255,255,0.75), rgba(0,0,0,0.75), rgba(255,255,255,0.75) ) repeat;
  background-size: 400% 100%;
  width: 6rem;
  height: 16px;
  border-radius: 9999px;
  -webkit-animation: ia-dwnO 8s linear infinite;
  animation: ia-dwnO 8s linear infinite;
  line-height: 0;
  width: 5rem;
  height: 10px;
  margin-top: -5px;
  margin-bottom: -5px;
}

<div>
  <span
    class="sc-AxiKw c0"
    color="#7c8186"
    data-test-id="tag-1"
    elevation="0"
  >
    <div
      class="sc-AxjAm sc-fzoiQi c1"
    />
  </span>
</div>
`;
